Moving the files to root to work on github pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Abigail Coe</title>
   <script src="https://use.fontawesome.com/f3503f439d.js"></script>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/app.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/app.js" charset="utf-8"></script>
 </head>
 <body>
     <nav>
