spacing on portfolio

--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
   <section id="portfolio">
     <div class="row" id="top">
       <div class="four columns offset-by-two wrap">
-        <a class="wrapper"></a>
-        <img class="nine columns" src="/img/litup.png" alt="" />
-        <p class="title">JavaScript game</p>
+        <img src="/img/litup.png" alt="" />
+        <p>JavaScript game</p>
       </div>
       <div class="four columns">
-        <img class="nine columns" src="/img/pleasure.png" alt="" />
+        <img src="/img/pleasure.png" alt="" />
         <p>Google Maps API and web scraping</p>
       </div>
     </div>
     <div class="row">
       <div class="four columns offset-by-two">
-        <img class="nine columns" src="/img/swish.png" alt="" />
+        <img src="/img/swish.png" alt="" />
         <p>MEAN stack clothes swapping app</p>
       </div>
       <div class="four columns">
-        <img class="nine columns" src="/img/whatsupp.png" alt="" />
+        <img src="/img/whatsupp.png" alt="" />
         <p>Whatsapp Sentiment Analysis app</p>
         <a href="https://github.com/abinocoe/wdi-project-4">View Code</a>
       </div>
@@ -51,9 +50,10 @@
         <img src="/img/portrait.jpg" alt="" />
         </div>
         <div class="six columns">
-        <h5>Key Points:</h5>
+        <h4>Key Points:</h4>
         <ul>
-          <li>Mad crazy about JavaScript and Mariage Freres tea</li>
+          <li>London based</li>
+          <li>Mad crazy about JavaScript and Mariage Frères tea</li>
           <li>Can be bribed with jelly</li>
           <li>Preferred architectural style: High Victorian Neo Gothic</li>
           <li>Still devastated that Gravity Falls is only two seasons long</li>
