tidying portfolio page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Abigail Coe</title>
   <script src="https://use.fontawesome.com/f3503f439d.js"></script>
   <link rel="stylesheet" href="/css/style.css">
@@ -24,22 +26,37 @@
     <div class="row" id="top">
       <div class="four columns offset-by-two wrap">
         <img src="/img/litup.png" alt="" />
-        <p>JavaScript game</p>
+        <p>
+          JavaScript game
+          <br />
+          <a href="https://github.com/abinocoe/wdi-project-1">View Code</a>
+          <a href="https://damp-retreat-26421.herokuapp.com/">View Live</a>
+        </p>
       </div>
       <div class="four columns">
         <img src="/img/pleasure.png" alt="" />
-        <p>Google Maps API and web scraping</p>
+        <p>
+          Google Maps API and web scraping
+          <br />
+          <a href="https://github.com/abinocoe/wdi-project-2">View Code</a>
+        </p>
       </div>
     </div>
     <div class="row">
       <div class="four columns offset-by-two">
         <img src="/img/swish.png" alt="" />
-        <p>MEAN stack clothes swapping app</p>
+        <p>
+          MEAN stack clothes swapping app
+          <br />
+          <a href="https://github.com/cjbrunnen/wdi-project-3">View Code</a>
+        </p>
       </div>
       <div class="four columns">
         <img src="/img/whatsupp.png" alt="" />
-        <p>Whatsapp Sentiment Analysis app</p>
-        <a href="https://github.com/abinocoe/wdi-project-4">View Code</a>
+        <p>
+          Whatsapp Sentiment Analysis app
+          <br /><a href="https://github.com/abinocoe/wdi-project-4">View Code</a>
+        </p>
       </div>
     </div>
   </section>
@@ -52,8 +69,8 @@
         <div class="six columns">
         <h4>Key Points:</h4>
         <ul>
-          <li>London based</li>
           <li>Mad crazy about JavaScript and Mariage Frères tea</li>
+          <li>London based</li>
           <li>Can be bribed with jelly</li>
           <li>Preferred architectural style: High Victorian Neo Gothic</li>
           <li>Still devastated that Gravity Falls is only two seasons long</li>
