adding bebas file

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <li>Can be bribed with jelly</li>
               <li>Preferred architectural style: High Victorian Neo Gothic</li>
               <li>Still devastated that Gravity Falls is only two seasons long</li>
+              <li>"Exemplary Vocab"</li>
               <li>Open to chats or cat gifs at the links below</li>
             </ul>
             <p>
@@ -53,7 +54,7 @@
             <img src="/img/litup.png" alt="" />
           </a>
           <p>
-            JavaScript game
+            jQuery and OOP game
             <br />
             <a href="https://github.com/abinocoe/wdi-project-1">Code</a>
           </p>
