updated A Time of Gifts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li>Open to chats or cat gifs at the links below</li>
             </ul>
             <p>
-              <b>Currently reading:<br />Nicholson Baker's The Mezzanine</b>
+              <b>Currently reading:<br />Patrick Leigh Fermor's A Time of Gifts</b>
             </p>
           </div>
         </div>
