now reading Auster

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li>Open to chats or cat gifs at the links below</li>
             </ul>
             <p>
-              <b>Currently reading:<br />Mikhail Bulgakov's The Master and Margarita</b>
+              <b>Currently reading:<br />Paul Auster's The New York Trilogy</b>
             </p>
           </div>
         </div>
