--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <script src="https://use.fontawesome.com/f3503f439d.js"></script>
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/app.js" charset="utf-8"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93043668-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   <div class="wrapper">
