now reading Consider Phlebas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <li>Open to chats or cat gifs at the links below</li>
             </ul>
             <p>
-              <b>Currently reading:<br />Paul Auster's The New York Trilogy</b>
+              <b>Currently reading:<br />Iain M Banks' Consider Phlebas</b>
             </p>
           </div>
         </div>
