currently reading Raymond Chandler

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="row">
           <div class="six columns">
-            <img src="/img/portrait.jpg" alt="" />
+            <img src="/img/portrait.jpg" alt="Abigail Coe's face" />
           </div>
           <div class="six columns">
             <h4>Key Points:</h4>
@@ -51,7 +51,7 @@
               <li>Open to chats or cat gifs at the links below</li>
             </ul>
             <p>
-              <b>Currently reading:<br />Iain M Banks' Consider Phlebas</b>
+              <b>Currently reading:<br />Raymond Chandler's The Big Sleep</b>
             </p>
           </div>
         </div>
